--- a/template/index.html
+++ b/template/index.html
@@ -36,7 +36,7 @@
 <div class="content-right">
 <a href="#slide-out-right" data-activates="slide-out-right" class="sidebar-search"><i class="fa fa-search"></i></a>
 <a href="#slide-out-cart" data-activates="slide-out-cart" class="sidebar-cart">
-<i class="fa fa-shopping-cart"></i>
+<i class="fa fa-bell"></i>
 <sup>3</sup>
 </a>
 </div>
