--- a/template/categories.html
+++ b/template/categories.html
@@ -122,13 +122,16 @@
 </div>
 <div class="clear"></div>
 </li>
-<li><h5>Popular Search</h5></li>
-<li><a href="#">Football</a></li>
-<li><a href="#">Lemon</a></li>
-<li><a href="#">Canon</a></li>
-<li><a href="#">Laptop</a></li>
-<li><a href="#">Pizza</a></li>
-<li><a href="#">Sport</a></li>
+<li><div class="col s6">
+<select class="browser-default">
+<option value="1">Newest Items</option>
+<option value="2">Best Seller</option>
+<option value="3">Popular</option>
+<option value="3">Price: High to Low</option>
+<option value="3">Price: Low to High</option>
+</select>
+</div></li>
+
 </ul>
 </div>
 
