--- a/template/categories.html
+++ b/template/categories.html
@@ -122,6 +122,7 @@
 </div>
 <div class="clear"></div>
 </li>
+<li><h5>Categories</h5></li>
 <li><div class="col s6">
 <select class="browser-default">
 <option value="1">Newest Items</option>
@@ -131,7 +132,6 @@
 <option value="3">Price: Low to High</option>
 </select>
 </div></li>
-
 </ul>
 </div>
 
