--- a/template/categories.html
+++ b/template/categories.html
@@ -122,7 +122,7 @@
 </div>
 <div class="clear"></div>
 </li>
-<li><h5>Categories</h5></li>
+<li><h5>ville</h5></li>
 <li><div class="col s6">
 <select class="browser-default">
 <option value="1">Newest Items</option>
@@ -132,6 +132,114 @@
 <option value="3">Price: Low to High</option>
 </select>
 </div></li>
+<li><h5>categories</h5></li>
+<li><ul class="collapsible" data-collapsible="accordion">
+<li class="">
+<div class="collapsible-header text-bold">
+<i class="fa fa-female"></i>Fashion
+</div>
+<div class="collapsible-body" style="display: none; padding-top: 16px; margin-top: 0px; padding-bottom: 16px; margin-bottom: 0px;">
+<ul>
+<li><a href="#">Jacket</a></li>
+<li><a href="#">Shirt</a></li>
+<li><a href="#">Dress</a></li>
+<li><a href="#">Boot</a></li>
+<li><a href="#">Sandals</a></li>
+</ul>
+</div>
+</li>
+<li class="">
+<div class="collapsible-header text-bold">
+<i class="fa fa-industry"></i>Fruit
+</div>
+<div class="collapsible-body" style="display: none;">
+<ul>
+<li><a href="#">Apple</a></li>
+<li><a href="#">Banana</a></li>
+<li><a href="#">Orange</a></li>
+<li><a href="#">Mango</a></li>
+<li><a href="#">Pineapple</a></li>
+<li><a href="#">Watermelon</a></li>
+</ul>
+</div>
+</li>
+<li>
+<div class="collapsible-header text-bold">
+<i class="fa fa-futbol-o"></i>Sport
+</div>
+<div class="collapsible-body">
+<ul>
+<li><a href="#">Badminton</a></li>
+<li><a href="#">Barbell</a></li>
+<li><a href="#">Bed</a></li>
+<li><a href="#">Helmets</a></li>
+<li><a href="#">Bicycle</a></li>
+</ul>
+</div>
+</li>
+<li>
+<div class="collapsible-header text-bold">
+<i class="fa fa-television"></i>Electronics
+</div>
+<div class="collapsible-body">
+<ul>
+<li><a href="#">Battery</a></li>
+<li><a href="#">Headphones</a></li>
+<li><a href="#">Laptops</a></li>
+<li><a href="#">Printer</a></li>
+<li><a href="#">Microwave</a></li>
+<li><a href="#">Audio speakers</a></li>
+</ul>
+</div>
+</li>
+<li>
+<div class="collapsible-header bor-rad text-bold">
+<i class="fa fa-car"></i>Automotive
+</div>
+<div class="collapsible-body">
+<ul>
+<li><a href="#">Scooter</a></li>
+<li><a href="#">Ambulance</a></li>
+<li><a href="#">Motorcycle</a></li>
+<li><a href="#">Car</a></li>
+</ul>
+</div>
+</li>
+<li>
+<div class="collapsible-header bor-rad text-bold">
+<i class="fa fa-camera-retro"></i>Camera
+</div>
+<div class="collapsible-body">
+<ul>
+<li><a href="#">Spotlights</a></li>
+<li><a href="#">Canon camera</a></li>
+</ul>
+</div>
+</li>
+<li>
+<div class="collapsible-header bor-rad text-bold">
+<i class="fa fa-cubes"></i>Toy
+</div>
+<div class="collapsible-body">
+<ul>
+<li><a href="#">Tamia</a></li>
+<li><a href="#">Airsoft gun</a></li>
+<li><a href="#">Playstation</a></li>
+</ul>
+</div>
+</li>
+<li>
+<div class="collapsible-header bor-rad text-bold">
+<i class="fa fa-cutlery"></i>Food
+</div>
+<div class="collapsible-body">
+<ul>
+<li><a href="#">Fried chicken</a></li>
+<li><a href="#">Grilled chicken</a></li>
+</ul>
+</div>
+</li>
+</ul></li>
 </ul>
 </div>
 
