--- a/template/categories.html
+++ b/template/categories.html
@@ -255,7 +255,7 @@
     </div>
 
 
-    <div class="sidebar-cart">
+    <div class="sidebar-panel sidebarCart">
         <div id="slide-out-cart" class="collapsible side-nav">
             <div class="content">
                 <div class="cart-img">
