--- a/template/categories.html
+++ b/template/categories.html
@@ -117,7 +117,7 @@
     </div>
 
 
-    <div class="sidebarSearch">
+    <div class="sidebar-panel sidebarSearch">
         <ul id="slide-out-right" class="collapsible side-nav">
             <li>
                 <div class="form">
