--- a/template/categories.html
+++ b/template/categories.html
@@ -117,32 +117,34 @@
     </div>
 
 
-    <div class="sidebar-panel sidebarSearch">
+    <div>
         <ul id="slide-out-right" class="collapsible side-nav">
-            <li>
-                <div class="form">
-                    <input type="search"><button class="button"><i class="fa fa-search"></i></button>
-                </div>
-                <div class="clear"></div>
-            </li>
-            <li>
-                <h5>ville</h5>
-            </li>
-            <li>
-                <div class="col s6">
-                    <select class="browser-default">
-<option value="1">Newest Items</option>
-<option value="2">Best Seller</option>
-<option value="3">Popular</option>
-<option value="3">Price: High to Low</option>
-<option value="3">Price: Low to High</option>
-</select>
-                </div>
-            </li>
-            <li>
-                <h5>categories</h5>
-            </li>
-            <li>
+			<div class="sidebarSearch" style="padding:15px">
+				<li>
+					<div class="form">
+						<input type="search"><button class="button"><i class="fa fa-search"></i></button>
+					</div>
+					<div class="clear"></div>
+				</li>
+				<li>
+					<h5>ville</h5>
+				</li>
+				<li>
+					<div class="col s6">
+						<select class="browser-default">
+	<option value="1">Newest Items</option>
+	<option value="2">Best Seller</option>
+	<option value="3">Popular</option>
+	<option value="3">Price: High to Low</option>
+	<option value="3">Price: Low to High</option>
+	</select>
+					</div>
+				</li>
+				<li>
+					<h5>categories</h5>
+				</li>
+				<li>
+			</div>
                 <ul class="collapsible" data-collapsible="accordion">
                     <li class="">
                         <div class="collapsible-header text-bold">
@@ -255,7 +257,7 @@
     </div>
 
 
-    <div class="sidebar-panel sidebarCart">
+    <div class="sidebarCart">
         <div id="slide-out-cart" class="collapsible side-nav">
             <div class="content">
                 <div class="cart-img">
