--- a/template/categories.html
+++ b/template/categories.html
@@ -127,7 +127,7 @@
 					<div class="clear"></div>
 				</li>
 				<li>
-					<h5>ville</h5>
+					<h5>Ville</h5>
 				</li>
 				<li>
 					<div class="col s6">
@@ -140,8 +140,14 @@
 						</select>
 					</div>
 				</li>
+				
+				<div class="control">
+					<i class="medium material-icons">trending_up</i>
+					<span> Tendances </span>
+				</div>
+				
 				<li>
-					<h5>categories</h5>
+					<h5 class="patchTop" > Categories</h5>
 				</li>
 				<li>
 			</div>
