--- a/template/product-list.html
+++ b/template/product-list.html
@@ -221,7 +221,7 @@
                         <p>Casual Clothes in a Modern Style</p>
                     </a>
                     <h5>$28</h5>
-                    <button class="button">Add to Cart</button>
+                    <button class="button">Reprise</button>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -234,7 +234,7 @@
                         <p>Casual Clothes in a Modern Style</p>
                     </a>
                     <h5>$28</h5>
-                    <button class="button">Add to Cart</button>
+                    <button class="button">Reprise</button>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -247,7 +247,7 @@
                         <p>Casual Clothes in a Modern Style</p>
                     </a>
                     <h5>$28</h5>
-                    <button class="button">Add to Cart</button>
+                    <button class="button">Reprise</button>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -260,7 +260,7 @@
                         <p>Casual Clothes in a Modern Style</p>
                     </a>
                     <h5>$28</h5>
-                    <button class="button">Add to Cart</button>
+                    <button class="button">Reprise</button>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -273,7 +273,7 @@
                         <p>Trendy Headband Style in 2018</p>
                     </a>
                     <h5>$11</h5>
-                    <button class="button">Add to Cart</button>
+                    <button class="button">Reprise</button>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -286,7 +286,7 @@
                         <p>Shoes that Light up When Dark</p>
                     </a>
                     <h5>$32</h5>
-                    <button class="button">Add to Cart</button>
+                    <button class="button">Reprise</button>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -299,7 +299,7 @@
                         <p>Casual Shoes that are Comfortable</p>
                     </a>
                     <h5>$19</h5>
-                    <button class="button">Add to Cart</button>
+                    <button class="button">Reprise</button>
                 </div>
                 <div class="clear"></div>
             </div>
