--- a/template/categories.html
+++ b/template/categories.html
@@ -126,31 +126,42 @@
 					</div>
 					<div class="clear"></div>
 				</li>
+				
 				<li>
 					<h5>Ville</h5>
 				</li>
+				
 				<li>
 					<div class="col s6">
 						<select class="browser-default">
-						<option value="1">Newest Items</option>
-						<option value="2">Best Seller</option>
-						<option value="3">Popular</option>
-						<option value="3">Price: High to Low</option>
-						<option value="3">Price: Low to High</option>
+							<option value="1">Newest Items</option>
+							<option value="2">Best Seller</option>
+							<option value="3">Popular</option>
+							<option value="3">Price: High to Low</option>
+							<option value="3">Price: Low to High</option>
 						</select>
 					</div>
 				</li>
 				
-				<div class="control">
-					<i class="medium material-icons">trending_up</i>
-					<span> Tendances </span>
+				<div class="container-controls" style="display: flex;justify-content: space-between;padding-top: 31px;color: #e82954;">
+					<div class="control" style="width: 70px;text-align: center;margin: auto;font-weight: bold;position: relative;cursor:pointer;">
+						<i class="material-icons" style="font-size: 3rem;">trending_up</i>
+						<span style="position: relative;top: -10px;text-align: center;"> Tendances </span>
+					</div>
+
+					<div class="control" style="width: 100px;text-align: center;margin: auto;font-weight: bold;position: relative;cursor:pointer;">
+						<i class="material-icons" style="font-size: 2rem;padding: 0.6rem;padding-bottom: 0.7rem;">map</i>
+						<span style="position: relative;top: -10px;text-align: center;display: block;">Proche de Moi</span>
+					</div>
 				</div>
+				
 				
 				<li>
 					<h5 class="patchTop" > Categories</h5>
 				</li>
-				<li>
 			</div>
+			
+				<li>
                 <ul class="collapsible" data-collapsible="accordion">
                     <li class="">
                         <div class="collapsible-header text-bold">
