--- a/template/product-details.html
+++ b/template/product-details.html
@@ -208,8 +208,9 @@
                     <div class="desc-short">
                         <h4>Casual Clothes in a Modern Style</h4>
                         <h5 style="color:green;"><button class="button" style="background:green;margin-right:3px;" >Ouvert</button> 25 demandes de reprises</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus cum autem illo libero </p>
-                        <button class="button" style="width:100%;padding:10px 0px;"><i class="fa fa-shopping-cart"></i> Reprise </button>
+						<p style="text-align: right; vertical-align: middle;"> <i class="material-icons" style="vertical-align: middle;font-size: 110%;">location_on</i> Tétouan </p>
+						<p style="text-align: right; vertical-align: middle;"> <i class="material-icons" style="vertical-align: middle;font-size: 110%;">date_range</i> 20/10/2017 </p>
+                        <button class="button" style="width:100%;padding:10px 0px;"> REPRISE </button>
                     </div>
                     <div class="share-media">
                         <h5>Share</h5>
@@ -226,7 +227,7 @@
                     </div>
                 </div>
                 <div class="review">
-                    <h5>Review</h5>
+				
                     <div class="comment-people">
                         <div class="contents">
                             <div class="icon">
@@ -238,27 +239,41 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             </div>
                         </div>
-                        <div class="contents reply">
+                        <!-- <div class="contents reply"> -->
+                            <!-- <div class="icon"> -->
+                                <!-- <img src="images/comment2.png" alt=""> -->
+                            <!-- </div> -->
+                            <!-- <div class="text"> -->
+                                <!-- <h6>Jordan <i class="fa fa-bookmark"></i></h6> -->
+                                <!-- <p class="date">January 10, 2018</p> -->
+                                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                    </div>
+					
+					<div class="comment-people">
+                        <div class="contents">
                             <div class="icon">
-                                <img src="images/comment2.png" alt="">
+                                <img src="images/comment1.png" alt="">
                             </div>
                             <div class="text">
-                                <h6>Jordan <i class="fa fa-bookmark"></i></h6>
+                                <h6>John Doe</h6>
                                 <p class="date">January 10, 2018</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            </div>
+                                <p>Tswapi m3aya bhada wnzidek 500dh alkhawa, rah kanskun ghir 9rib 3lik ntla9aw nwtfahmo, kayen mofahama, rah ba9i jdid wlah</p>
+								<div class="content no-bb">
+									<div class="product-image">
+										<img src="images/product1.jpg" alt="">
+									</div>
+								</div>
+							</div>
                         </div>
                     </div>
+										
                 </div>
                 <div class="comment-post">
-                    <div class="comment-title">
-                        <h5>Leave Your Reply</h5>
-                    </div>
                     <form>
-                        <input type="text" placeholder="Name">
-                        <input type="email" placeholder="Email">
                         <textarea class="no-mb" cols="30" rows="10" placeholder="Message"></textarea>
-                        <button class="button">Submit</button>
+                        <button class="button" style="width:100%;padding:10px 0px;"> Commenter </button>
                     </form>
                 </div>
             </div>
